crates/apollo-compiler/test_data/diagnostics/0070_self_referential_directive_definition.txt
Error: `invalidExample` directive definition cannot reference itself
   ╭─[0070_self_referential_directive_definition.graphql:7:1]
   │
 7 │ directive @invalidExample(arg: String @invalidExample) on ARGUMENT_DEFINITION
   │ ────────────┬────────────             ───────┬───────  
   │             ╰────────────────────────────────────────── recursive directive definition
   │                                              │         
   │                                              ╰───────── refers to itself here
───╯
Error: `deprecatedType` directive definition cannot reference itself
    ╭─[0070_self_referential_directive_definition.graphql:11:1]
    │
 10 │ extend scalar String @deprecatedType(reason: "use OurCustomString instead")
    │                      ───────────────────────────┬──────────────────────────  
    │                                                 ╰──────────────────────────── refers to itself here
 11 │ directive @deprecatedType(reason: String!) on OBJECT | INTERFACE | ENUM | SCALAR | UNION
    │ ────────────┬────────────  
    │             ╰────────────── recursive directive definition
────╯
Error: `loopA` directive definition cannot reference itself
    ╭─[0070_self_referential_directive_definition.graphql:13:1]
    │
 13 │ directive @loopA(arg: Boolean @loopB) on ARGUMENT_DEFINITION
    │ ────────┬───────  
    │         ╰───────── recursive directive definition
    │ 
 15 │ directive @loopC(arg: Boolean @loopA) on ARGUMENT_DEFINITION
    │                               ───┬──  
    │                                  ╰──── refers to itself here
────╯
Error: `loopB` directive definition cannot reference itself
    ╭─[0070_self_referential_directive_definition.graphql:14:1]
    │
 13 │ directive @loopA(arg: Boolean @loopB) on ARGUMENT_DEFINITION
    │                               ───┬──  
    │                                  ╰──── refers to itself here
 14 │ directive @loopB(arg: Boolean @loopC) on ARGUMENT_DEFINITION
    │ ────────┬───────  
    │         ╰───────── recursive directive definition
────╯
Error: `loopC` directive definition cannot reference itself
    ╭─[0070_self_referential_directive_definition.graphql:15:1]
    │
 14 │ directive @loopB(arg: Boolean @loopC) on ARGUMENT_DEFINITION
    │                               ───┬──  
    │                                  ╰──── refers to itself here
 15 │ directive @loopC(arg: Boolean @loopA) on ARGUMENT_DEFINITION
    │ ────────┬───────  
    │         ╰───────── recursive directive definition
────╯
Error: `wrong` directive definition cannot reference itself
    ╭─[0070_self_referential_directive_definition.graphql:21:1]
    │
 18 │ extend enum Enum { RECURSIVE @wrong }
    │                              ───┬──  
    │                                 ╰──── refers to itself here
    │ 
 21 │ directive @wrong(input: InputObject) on INPUT_FIELD_DEFINITION | ENUM_VALUE
    │ ────────┬───────  
    │         ╰───────── recursive directive definition
────╯

